@@ -1,20 +1,20 @@
-OPENJDK_VERSION = b58
+OPENJDK_VERSION = b59
 
-OPENJDK_CHANGESET = 4264c2fe6649
-CORBA_CHANGESET = 61116c9789b9
-JAXP_CHANGESET = ae890d80d5df
-JAXWS_CHANGESET = 41a66a42791b
-JDK_CHANGESET = 111759f6793e
-LANGTOOLS_CHANGESET = 2c0076945b1a
-HOTSPOT_CHANGESET = ce2272390558
+OPENJDK_CHANGESET = 0d76c4da605f
+CORBA_CHANGESET = e9ba2b962ddf
+JAXP_CHANGESET = 748976d69503
+JAXWS_CHANGESET = faac46e2e60f
+JDK_CHANGESET = 2dd6aaa32d8a
+LANGTOOLS_CHANGESET = 0f653be1a42f
+HOTSPOT_CHANGESET = aa0c48844632
 
-OPENJDK_MD5SUM = 5a8079dc55a46ae3750fdf7ca0ac0c7e
-CORBA_MD5SUM = f4cad920654b2e26cb10096ef36a6fbd
-JAXP_MD5SUM = 3356a4449fffd71c19aaae98deb04e88
-JAXWS_MD5SUM = c45f0c75b7c2a0091f697e0c83f85e3f
-JDK_MD5SUM = 23b1790a8ca14c91cbed0b5843027d54
-LANGTOOLS_MD5SUM = 51735120c48db8ccaf11296ab5b73c5e
-HOTSPOT_MD5SUM = 94f6a0f2ccf1b79b0950f6f74a73214e
+OPENJDK_MD5SUM = 51beb96e5d6bc4b875b4316f4ef724d7
+CORBA_MD5SUM = 13b64a402845a469cae31e04ffc5ee80
+JAXP_MD5SUM = 18c922319545d7e907a2d6cbb265865d
+JAXWS_MD5SUM = b2c0a779e349f82427a78485ef53321b
+JDK_MD5SUM = 93af337ffa87c10c2b90e0938fedf3ee
+LANGTOOLS_MD5SUM = ccad721f71ab49a61bbf684039b4d55d
+HOTSPOT_MD5SUM = c40c25a481a1c33ac15a89812a0b9f8c
 
 CACAO_VERSION = 0.99.4
 CACAO_MD5SUM = 63220327925ace13756ae334c55a3baa
